Added code to show previous calculations, initial try.

--- a/war/Credit_calculator.html
+++ b/war/Credit_calculator.html
@@ -69,5 +69,24 @@
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
     </table>
+    <br/>
+    <br/>
+    <table id="previousCalculationTable" align="center" width="700" style="display:none;">
+      <tr>
+        <td colspan="4" align="center" style="font-size:16;font-weight:bold;">Previous Calculations</td>
+      </tr>
+      <tr>
+        <td>Initial Principal</td>
+        <td>Monthly Payment</td>
+        <td>Interest Rate</td>
+        <td>Interest Paid</td>
+      </tr>
+      <tr>
+        <td id="lastInitialPrincipalFieldContainer"></td>
+        <td id="lastMonthlyPaymentFieldContainer"></td>
+        <td id="lastInterestRateFieldContainer"></td>
+        <td id="lastInterestPaidFieldContainer"></td>
+      </tr>
+    </table>
   </body>
 </html>
