Cleaned up some code and added number verification for the input fields.

--- a/war/credit-calculator.html
+++ b/war/credit-calculator.html
@@ -11,12 +11,12 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="Credit_calculator.css">
+    <link type="text/css" rel="stylesheet" href="credit-calculator.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Credit Calculator</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -44,7 +44,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Credit Calculator</h1>
 
     <table align="center">
       <tr>
@@ -66,7 +66,7 @@
         <td colspan="2" id="calculateButtonContainer"></td>
       </tr>
       <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
+        <td colspan="2" id="errorLabelContainer"></td>
       </tr>
     </table>
     <br/>
